# libxsp

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  Xsp.c  Xsp.h  configure  configure.ac  testxsp.c  xsp.pc.in
debian/: changelog  control  libxsp-dev.install  libxsp0.install  rules
